--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url = jdbc:mysql://localhost:3306/softwareticketmanagement
+spring.datasource.url = jdbc:mysql://localhost:3306/sample
 spring.datasource.username = root
-spring.datasource.password = Sharan@0201
+spring.datasource.password = Admin@123
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
