implementation of caching using jcache and ehcache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username = root
 spring.datasource.password = Admin@123
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.cache.jcache.config=classpath:ehcache.xml
 
 server.port= 8080
