--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,6 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 			<!-- Other dependencies -->
-
 			<dependency>
 				<groupId>javax.xml.bind</groupId>
 				<artifactId>jaxb-api</artifactId>
@@ -118,6 +117,13 @@
 				<artifactId>jaxb-runtime</artifactId>
 				<version>2.3.1</version>
 			</dependency>
+		<!-- Mockito Test Dependent -->
+		<!-- Maven -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
